2018.11/_sources/index.rst.txt
.. _contents: Table of contents

.. image:: images/SWUpdate.png
        :scale: 25 %
        :align: center

############################################
Updating an embedded system
############################################

SWUpdate provides a reliable way to update
the software on an embedded system.
Sources are hosted at https://github.com/sbabic/swupdate

.. raw:: html

        <center>
        <a class="github-button" href="https://github.com/sbabic/swupdate" data-icon="octicon-star" data-size="large" aria-label="Star sbabic/swupdate on GitHub">Star SWUpdate</a>
        <script async defer src="https://buttons.github.io/buttons.js"></script>
        </center>

.. toctree::
   :maxdepth: 2

   overview.rst
   licensing.rst

############################################
SWUpdate Documentation
############################################

.. toctree::
   :maxdepth: 2

   swupdate.rst
   sw-description.rst
   signed_images.rst
   encrypted_images.rst
   handlers.rst
   mongoose.rst
   suricatta.rst
   swupdate-ipc.rst
   progress.rst
   building-with-yocto.rst

############################################
Help and support
############################################

.. toctree::
   :maxdepth: 2

   help_and_support.rst
   contributing.rst

############################################
Roadmap
############################################

.. toctree::
   :maxdepth: 2

   roadmap.rst

Indices and tables
==================

* :ref:`genindex`
* :ref:`modindex`
* :ref:`search`
